# GraphicsLab

./: CMakeLists.txt  README.md  lab.sh  run.sh
src/: main.cpp
src/core/: TextRenderer3D.cpp  TextRenderer3D.h
src/libs/: earcut.hpp  stb_truetype.h
src/scenes/: Scene.h  Scene01_ClearColor.h  Scene02_Input.h  Scene03_MouseInput.h  Scene04_Optimized.h
